Fixed broken css in signup page

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -27,7 +27,7 @@ a {
   outline 0
   #form{
     position absolute
-    margin-top 60px
+    margin-top 55px
     padding 20px
     .form-control{
       margin-top 30px
@@ -56,9 +56,8 @@ a {
       outline 0
     }
     input[type="checkbox"]{
-      
       //display inline-block;
-    } 
+    }
     .form-session{
       font-size 12px
     }
